# libqif

./: README.md
.github/workflows/: build.yml  prepare-build-linux.sh
lib_cpp/include/qif_bits/: QuadraticProgram.h  geo.h  range.hpp
lib_python/: CMakeLists.txt
misc/docker/libqif-manylinux/: Dockerfile  setup.sh
samples/: CMakeLists.txt
